--- a/Landingpage/mediaQuery.css
+++ b/Landingpage/mediaQuery.css
@@ -36,3 +36,48 @@
         height: 450px;
        }
 }
+
+@media only screen and (min-width: 320px) and (max-width: 480px ) 
+{
+    .content {
+        left: 50%;
+        top: 30%;
+     }
+
+   label p{
+      font-size: .85rem;
+      margin-top: -10px;
+     }
+
+
+     .content h1{
+        font-size: 1.5rem;
+    }
+
+    .none {
+        display: block !important;
+        font-size: 1.5rem;
+       }
+
+       .content  .p1{
+        font-size: 1rem!important;
+    }
+
+    .main-img  img{
+      margin-top: 45%;
+     } 
+
+     .content  .p2{
+        font-size: 0.5rem!important;
+    }
+
+    
+    .content button {
+        padding: 5px 25px 6px 25px;
+    }
+
+    main {
+        height: 80vh;
+    }
+}
+
